# server/app/MobileEnvelopes/MobileEnvelopeUnavailable.php
@@ -1,0 +1,9 @@
+<?php
+
+declare(strict_types=1);
+
+namespace App\MobileEnvelopes;
+
+use RuntimeException;
+
+final class MobileEnvelopeUnavailable extends RuntimeException {}
